# IPP-rest-CPP

./: CMakeLists.txt  readme.md
lib/CPPLogger/: CPPLogger.cpp  CPPLogger.h
src/: main.cpp
src/middleware/: JsonAPI.h  JsonAPI.hpp  StaticResource.cpp  StaticResource.h
src/network/: LinuxSocketObject.cpp  SocketObject.h  SocketServer.h  SocketServer.hpp  WindowsSocketObject.cpp  defaultMsgLoop.cpp  messageLoop.h
src/proxy/: HTTPException.h  HTTPParser.cpp  HTTPParser.h  HTTPProxyHandler.cpp  HTTPProxyHandler.h  Router.cpp  Router.h  proxyMessageLoop.h  proxyMessageLoop.hpp
src/router/: HTMLRouter.h  HTMLRouter.hpp  IHTTPRequest.cpp  IHTTPRequest.h  IHTTPResponse.cpp  IHTTPResponse.h  Router.cpp  Router.h  RouterCallable.cpp  RouterCallable.h
src/template/: JSONTemplateLoop.h  JSONTemplateNode.h  JSONTemplateRenderer.cpp  JSONTemplateRenderer.h  JSONTemplateRoot.h  JSONTemplateVar.h
src/utils/: URL.cpp  URL.h  URL.hpp  stl_helper.h
test/JSONTemplate/: JSONTemplateTest.cpp
